--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   min-height: 100vh;
   max-width: 540px;
   margin: 0 auto;
@@ -28,6 +27,7 @@ body {
   font-size: 42px;
   display: flex;
   align-items: center;
+  margin-top: 124px;
 
   &__dot {
     margin: 16px;
@@ -48,10 +48,17 @@ body {
   }
 }
 
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .quote {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0;
   &__author {
     font-weight: 300;
     font-size: 18px;
