fix: friends font added directly to the project

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,7 +26,7 @@ body {
 }
 
 .header {
-  font-family: "Gabriel Weiss' Friends Font";
+  font-family: "gabriel_weiss_friends_fontRg";
   font-size: 24px;
   display: flex;
   align-items: center;
