--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,9 @@ body {
   @media screen and (min-width: 520px) {
     max-width: 480px;
   }
+  @media screen and (min-width: 1020px) {
+    max-width: 800px;
+  }
 }
 
 .button {
@@ -26,37 +29,27 @@ body {
 }
 
 .header {
-  font-family: "gabriel_weiss_friends_fontRg";
-  font-size: 24px;
-  display: flex;
-  align-items: center;
-  margin-top: 64px;
-  @media screen and (min-width: 520px) {
-    font-size: 40px;
-    margin-top: 124px;
-  }
+  width: 100%;
+}
 
+
+.logo {
+  margin: 16px;
+  width: 100%;
+  height: 120px;
   &__dot {
-    margin: 8px;
-    content: "";
-    display: inline-block;
-    border-radius: 50%;
-    width: 6px;
-    height: 6px;
-    @media screen and (min-width: 520px) {
-      margin: 16px;
-    width: 8px;
-    height: 8px;
-    }
     &--blue {
-      background: blue;
+      fill: blue;
     }
     &--red {
-      background: red;
+      fill: red;
     }
     &--yellow {
-      background: rgb(236, 192, 47);;
+      fill: rgb(236, 192, 47);
     }
+  }
+  @media screen and (min-width: 520px) {
+    height: 240px;
   }
 }
 
@@ -76,15 +69,16 @@ body {
   }
   &__author {
     font-weight: 300;
-    font-size: 18px;
-    line-height: 32px;
+    font-size: 14px;
+    line-height: 22px;
+    
     &::before {
       content: "—";
       color: rgb(0, 0, 0);
     }
     @media screen and (min-width: 520px) {
-      font-size: 14px;
-    line-height: 22px;
+      font-size: 18px;
+    line-height: 32px;
     }
   }
   &__text {
@@ -103,7 +97,7 @@ body {
   text-align: center;
   font-size: 18px;
   line-height: 36px;
-  margin-bottom: 42px;
+  margin: 0 0 42px 0;
   @media screen and (min-width: 520px) {
     font-size: 20px;
     line-height: 40px;
